# sandbox

./: .gitattributes  .gitignore  AUTO_DEPLOY_STATUS.md  DriveSync.ps1  EMERGENCY_RECOVERY.md  PERFECTION_ACHIEVEMENT_REPORT.md  README.md  deployment-results.json  deployment-status.txt  docker-compose.cloud-saas.yml  docker-compose.db.yml  docker-compose.headyide.yml  docker-compose.mcp.yml  docker-compose.yml  electron-direct.js  electron-loader.js  eslint.config.js  heady-manager.js  heady-registry.json  heady.bat  memory-payload.json  package-lock.json  project-plan.md  project-summary.md  render.yml  system-operational.txt  test-db-connection.js
.heady/: rx-history.json  stories.json
.heady-memory/: execution_readiness.json  immediate_context.json  personal-data-scan.json  project-data-scan.json
.windsurf/: admin-config.yaml  headycloud-config.yaml  model_config.yaml
AndroidSDK/: .knownPackages
E/: E-README.md
HeadyAI-IDE/: README.md  index.html  main.js  package-lock.json  package-old.json  package.json  postcss.config.js
configs/: agentic-coding.yaml  ai-services.yaml  aloha-protocol.yaml  auto-deploy-config.json  auto-deploy.yaml  auto-monitoring.yaml  auto-pipeline.yaml  automation-policy.yaml  brain-profiles.yaml  branded-domains.yaml  clean-domains.yaml  cloud-environments.yaml  cloud-first-pipeline.yaml  cloud-layers.yaml  cloudflare-dns.yaml  cloudflared-config.yaml  de-optimization-protocol.yaml  deployment-strategy.yaml  deployment.yaml  heady-ide.yaml  (+45 more)
headybrowser-desktop/src-tauri/: Cargo.toml
headybrowser-desktop/src-tauri/src/: main.rs
(+605 files in other folders)
